@@ -1,6 +1,6 @@
 Package: lokern
 Version: 1.1-9
-Date: 2021-04-07
+Date: 2021-04-09
 Title: Kernel Regression Smoothing with Local or Global Plug-in Bandwidth
 Author: Eva Herrmann <eherrmann@mathematik.tu-darmstadt.de> (F77 & S original);
 	Packaged for R and enhanced by Martin Maechler
